# Oopsilon

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  amd64.ini  meson.build  meson_options.txt
libm/: meson.build
psc/: libcxx  libcxxabi  libm  meson.build
psc/amd64/: crti.s  intr.c  kmain.c  limine.cfg  linker.ld  machdep.c  meson.build  vm.c
psc/amd64/include/amd64/: cpu.h  limine.h
psc/bscomp/: ast.hh  driver.hh  meson.build  parser.yy  scanner.ll
psc/hosted/: main.cc  meson.build
psc/kern/: cxx.cc  kasan.c  sync.h  task.c
psc/libcshim/: __config_site  assert.h  endian.h  errno.h  fenv.h  inttypes.h  math.h  stdio.h  stdlib.h  string.h  time.h
psc/libcshim/sys/: param.h  time.h  types.h
psc/libkern/: klib.c  klib.h  nanoprintf.h  strtol.c
psc/qjs/: quickjs.c
psc/shims/: __config_site
psc/vm/: vm.c  vm.h  vm_page.c
tools/: mkiso.sh
