libm = static_library('libm',
	'fenv.s',
	'acos.c',
	'acosf.c',
	'acosh.c',
	'acoshf.c',
	'acoshl.c',
	'acosl.c',
	'asin.c',
	'asinf.c',
	'asinh.c',
	'asinhf.c',
	'asinhl.c',
	'asinl.c',
	'atan2.c',
	'atan2f.c',
	'atan2l.c',
	'atan.c',
	'atanf.c',
	'atanh.c',
	'atanhf.c',
	'atanhl.c',
	'atanl.c',
	'cbrt.c',
	'cbrtf.c',
	'cbrtl.c',
	'ceil.c',
	'ceilf.c',
	'ceill.c',
	'copysign.c',
	'copysignf.c',
	'copysignl.c',
	'__cos.c',
	'cos.c',
	'__cosdf.c',
	'cosf.c',
	'cosh.c',
	'coshf.c',
	'coshl.c',
	'__cosl.c',
	'cosl.c',
	'erf.c',
	'erff.c',
	'erfl.c',
	'exp10.c',
	'exp10f.c',
	'exp10l.c',
	'exp2.c',
	'exp2f.c',
	'exp2l.c',
	'exp.c',
	'expf.c',
	'expl.c',
	'expm1.c',
	'expm1f.c',
	'expm1l.c',
	'__expo2.c',
	'__expo2f.c',
	'fabs.c',
	'fabsf.c',
	'fabsl.c',
	'fdim.c',
	'fdimf.c',
	'fdiml.c',
	'finite.c',
	'finitef.c',
	'floor.c',
	'floorf.c',
	'floorl.c',
	'fma.c',
	'fmaf.c',
	'fmal.c',
	'fmax.c',
	'fmaxf.c',
	'fmaxl.c',
	'fmin.c',
	'fminf.c',
	'fminl.c',
	'fmod.c',
	'fmodf.c',
	'fmodl.c',
	'__fpclassify.c',
	'__fpclassifyf.c',
	'__fpclassifyl.c',
	'frexp.c',
	'frexpf.c',
	'frexpl.c',
	'hypot.c',
	'hypotf.c',
	'hypotl.c',
	'ilogb.c',
	'ilogbf.c',
	'ilogbl.c',
	'__invtrigl.c',
	'j0.c',
	'j0f.c',
	'j1.c',
	'j1f.c',
	'jn.c',
	'jnf.c',
	'ldexp.c',
	'ldexpf.c',
	'ldexpl.c',
	'lgamma.c',
	'lgammaf.c',
	'lgammaf_r.c',
	'lgammal.c',
	'lgamma_r.c',
	'llrint.c',
	'llrintf.c',
	'llrintl.c',
	'llround.c',
	'llroundf.c',
	'llroundl.c',
	'log10.c',
	'log10f.c',
	'log10l.c',
	'log1p.c',
	'log1pf.c',
	'log1pl.c',
	'log2.c',
	'log2f.c',
	'log2l.c',
	'logb.c',
	'logbf.c',
	'logbl.c',
	'log.c',
	'logf.c',
	'logl.c',
	'lrint.c',
	'lrintf.c',
	'lrintl.c',
	'lround.c',
	'lroundf.c',
	'lroundl.c',
	'modf.c',
	'modff.c',
	'modfl.c',
	'nan.c',
	'nanf.c',
	'nanl.c',
	'nearbyint.c',
	'nearbyintf.c',
	'nearbyintl.c',
	'nextafter.c',
	'nextafterf.c',
	'nextafterl.c',
	'nexttoward.c',
	'nexttowardf.c',
	'nexttowardl.c',
	'__polevll.c',
	'pow.c',
	'powf.c',
	'powl.c',
	'remainder.c',
	'remainderf.c',
	'remainderl.c',
	'__rem_pio2.c',
	'__rem_pio2f.c',
	'__rem_pio2_large.c',
	'__rem_pio2l.c',
	'remquo.c',
	'remquof.c',
	'remquol.c',
	'rint.c',
	'rintf.c',
	'rintl.c',
	'round.c',
	'roundf.c',
	'roundl.c',
	'scalb.c',
	'scalbf.c',
	'scalbln.c',
	'scalblnf.c',
	'scalblnl.c',
	'scalbn.c',
	'scalbnf.c',
	'scalbnl.c',
	'__signbit.c',
	'__signbitf.c',
	'__signbitl.c',
	'signgam.c',
	'significand.c',
	'significandf.c',
	'__sin.c',
	'sin.c',
	'sincos.c',
	'sincosf.c',
	'sincosl.c',
	'__sindf.c',
	'sinf.c',
	'sinh.c',
	'sinhf.c',
	'sinhl.c',
	'__sinl.c',
	'sinl.c',
	'sqrt.c',
	'sqrtf.c',
	'sqrtl.c',
	'__tan.c',
	'tan.c',
	'__tandf.c',
	'tanf.c',
	'tanh.c',
	'tanhf.c',
	'tanhl.c',
	'__tanl.c',
	'tanl.c',
	'tgamma.c',
	'tgammaf.c',
	'tgammal.c',
	'trunc.c',
	'truncf.c',
	'truncl.c',
	pic: true,
	include_directories: kern_incs,
	c_args: [ kern_c_args, '-Wno-unused', '-Wno-implicit', '-Wno-parentheses',#
        '-Wno-sign-compare', '-Wno-attributes', '-Wno-unknown-pragmas'])
